wip(sdm): due diligence
