# src/app/supporting/sdm/presentation/dto/sdm.dto.ts
@@ -1,4 +1,10 @@
-import { SdmStatus } from "../../domain/entities/sdm.entity";
+import { 
+  SdmDueDiligenceAnswerValue, 
+  SdmDueDiligenceAnswerVerif, 
+  SdmDueDiligenceRiskType, 
+  SdmDueDiligenceType, 
+  SdmStatus
+ } from "../../domain/entities/sdm.entity";
 
 export class SdmDTO {
   id?: string;
@@ -17,6 +23,7 @@ export class SdmDTO {
   work_experiences?: SdmWorkExperienceDTO[];
   functionals?: SdmFunctionalDTO[];
   trainings?: SdmTrainingDTO[];
+  due_diligence?: SdmDueDiligenceDTO;
 }
 
 export class SdmEducationDTO {
@@ -55,4 +62,28 @@ export class SdmTrainingDTO {
   instructur?: string;
   status: string;
   certification_path?: string;
+}
+
+export class SdmDueDiligenceDTO {
+  id?: string;
+  type: SdmDueDiligenceType;
+  answers?: SdmDueDiligenceAnswerDTO[];
+  conclusion?: string;
+  verification_date: Date;
+  evaluator: string;
+  risk: SdmDueDiligenceRiskType;
+  action: string;
+  created_at?: Date;
+  updated_at?: Date;
+  deleted_at?: Date;
+}
+
+export class SdmDueDiligenceAnswerDTO {
+  id?: string;
+  answer?: SdmDueDiligenceAnswerValue;
+  description?: string;
+  verification: SdmDueDiligenceAnswerVerif;
+  created_at?: Date;
+  updated_at?: Date;
+  deleted_at?: Date;
 }
